--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,14 @@ java {
 }
 
 ext {
-	springCloudVersion = '2023.0.1'
 	liquibaseCoreVersion = '4.27.0'
 	testcontainersVersion = '1.19.8'
 	cucumberVersion = '7.17.0'
+	springVaultVersion = '3.1.2'
+	springCloudVaultVersion = '4.1.3'
 	springRetryVersion = '2.0.6'
 	springAspectVersion = '6.1.6'
-	langchain4jVersion = '0.34.0'
+	langchain4jVersion = '0.35.0'
 	mockitoVersion = '5.11.0'
 	pgVersion = '42.7.3'
 	modelMapperVersion = '3.2.0'
@@ -53,6 +54,10 @@ dependencies {
 	implementation "dev.langchain4j:langchain4j-spring-boot-starter:${langchain4jVersion}"
 	implementation "dev.langchain4j:langchain4j-ollama-spring-boot-starter:${langchain4jVersion}"
 	implementation "dev.langchain4j:langchain4j-open-ai-spring-boot-starter:${langchain4jVersion}"
+
+	// spring vault
+	implementation "org.springframework.vault:spring-vault-core:${springVaultVersion}"
+	implementation "org.springframework.cloud:spring-cloud-vault-config:${springCloudVaultVersion}"
 
 	// spring retry
 	implementation "org.springframework.retry:spring-retry:${springRetryVersion}"
