--- a/build.gradle
+++ b/build.gradle
@@ -14,18 +14,18 @@ java {
 }
 
 ext {
-	liquibaseCoreVersion = '4.27.0'
-	testcontainersVersion = '1.19.8'
-	cucumberVersion = '7.17.0'
+	liquibaseCoreVersion = '4.29.0'
+	testcontainersVersion = '1.20.0'
+	cucumberVersion = '7.18.1'
 	springVaultVersion = '3.1.2'
 	springCloudVaultVersion = '4.1.3'
-	springRetryVersion = '2.0.6'
-	springAspectVersion = '6.1.6'
+	springRetryVersion = '2.0.7'
+	springAspectVersion = '6.1.10'
 	langchain4jVersion = '0.35.0'
-	mockitoVersion = '5.11.0'
+	mockitoVersion = '5.12.0'
 	pgVersion = '42.7.3'
-	modelMapperVersion = '3.2.0'
-	apacheCommonsVersion = '3.13.0'
+	mapStructVersion = '1.6.2'
+	apacheCommonsVersion = '3.15.0'
 	logbookVersion = '3.9.0'
 }
 
@@ -69,15 +69,16 @@ dependencies {
 	implementation "org.zalando:logbook-spring-boot-starter:${logbookVersion}"
 	implementation "org.postgresql:postgresql:${pgVersion}"
 	implementation "org.liquibase:liquibase-core:${liquibaseCoreVersion}"
-	implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
+	implementation "org.mapstruct:mapstruct:${mapStructVersion}"
 	implementation "org.apache.commons:commons-lang3:${apacheCommonsVersion}"
 
 	// compile
 	compileOnly 'org.projectlombok:lombok'
 
 	// annotation
-	annotationProcessor 'org.projectlombok:lombok'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	annotationProcessor "org.projectlombok:lombok"
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
 	// testAnnotation
 	testAnnotationProcessor 'org.projectlombok:lombok'
@@ -101,7 +102,7 @@ dependencies {
 	testImplementation "io.cucumber:cucumber-junit:${cucumberVersion}"
 	testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
 	testImplementation "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}"
-	testImplementation "org.junit.platform:junit-platform-suite:1.9.2"
+	testImplementation "org.junit.platform:junit-platform-suite:1.10.3"
 }
 
 tasks.named('test') {
